--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,9 @@
         android:theme="@style/Theme.SopaVariar"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".FormLogin"
             android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.SopaVariar">
+            android:theme="@style/Theme.AppCompat.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
