--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.SopaVariar"
         tools:targetApi="31">
         <activity
+            android:name=".Cadastro"
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.NoActionBar"/>
+        <activity
             android:name=".FormLogin"
             android:exported="true"
             android:theme="@style/Theme.AppCompat.NoActionBar">
